# Poetry doesn't allow a separate build system if it manages the package,
# so we don't allow it to manage this currently:
# https://github.com/python-poetry/poetry/issues/6154
[build-system]
requires = ["wheel", "setuptools", "setuptools-golang", "cffi >= 1.15.0"]
build-backend = "setuptools.build_meta"
